syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "CadastrarChavePix";



package br.com.zup;

service RegistrarChaveService {
  rpc registrarChave (RegistrarChaveRequest) returns (RegistroChaveResponse) {}
}

service DeletarChaveService {
  rpc deletarChave (DeletarChaveRequest) returns (DeletarChaveResponse) {}
}


enum TipoDeConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message RegistrarChaveRequest {

  string idCliente = 1;
  string tipoChave = 2;
  string valorChave = 3;
  string tipoConta = 4;

}

message RegistroChaveResponse {
  string pixId = 1;
  string chave = 2;
  string tipoChave = 3;

}

message DeletarChaveRequest {
  string valorDaChave = 1;
  string identificadorCliente = 2;
  string tipoChave = 3;
  string participant = 4;
}
message DeletarChaveResponse {
 string chave = 1;
 string participant = 2;
}